updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an entrepenuer and father of 4.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Layton, Utah</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love the outdoors. Specifically snowboarding and wakesurfing.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To own multiple businesses that can be run remotely and give me total freedom.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Kaysville, Utah</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I believe that becoming a developer will give me the skills to take more control of the web development for my current business and open doors for additionl income opportunities.</p>
     </section>
 
     <footer id="footer">
