--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Kaysville, Utah</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I believe that becoming a developer will give me the skills to take more control of the web development for my current business and open doors for additionl income opportunities.</p>
+      <p>I believe that becoming a developer will give me the skills to take more control of the web development for my current business and open doors for additional income opportunities.</p>
     </section>
 
     <footer id="footer">
